# diy_ackermann

./: CONTROL.md  INSTRUCCIONES.txt  README.md  TAREA.md  package.xml  setup.cfg  setup.py
diy_ackermann/: circle_driver.py  go_to_goal.py  lidar_test.py  obstacle_avoidance.py  simple_avoider.py
launch/: rviz.launch.py  simulation.launch.py
rviz/: diy_ackermann.rviz
urdf/: diy_ackermann.urdf.xacro
worlds/: ackermann_world.sdf  circuito_obstaculos.sdf  industrial-warehouse.sdf
